// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 2`] = `
{
  "@angular-devkit/build-angular": "^16.X.X",
  "@angular-eslint/builder": "9999.0.1-local-integration-tests",
  "@angular-eslint/eslint-plugin": "9999.0.1-local-integration-tests",
  "@angular-eslint/eslint-plugin-template": "9999.0.1-local-integration-tests",
  "@angular-eslint/schematics": "9999.0.1-local-integration-tests",
  "@angular-eslint/template-parser": "9999.0.1-local-integration-tests",
  "@angular/cli": "~16.X.X",
  "@angular/compiler-cli": "^16.X.X",
  "@types/jasmine": "~4.3.0",
  "@typescript-eslint/eslint-plugin": "5.59.9",
  "@typescript-eslint/parser": "5.59.9",
  "eslint": "^8.44.0",
  "jasmine-core": "~4.6.0",
  "karma": "~6.4.0",
  "karma-chrome-launcher": "~3.2.0",
  "karma-coverage": "~2.2.0",
  "karma-jasmine": "~5.1.0",
  "karma-jasmine-html-reporter": "~2.0.0",
  "ng-packagr": "^16.X.X",
  "typescript": "~5.X.X"
}
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 3`] = `
Object {
  "ignorePatterns": Array [
    "projects/**/*",
  ],
  "overrides": Array [
    Object {
      "extends": Array [
        "eslint:recommended",
        "plugin:@typescript-eslint/recommended",
        "plugin:@angular-eslint/recommended",
        "plugin:@angular-eslint/template/process-inline-templates",
      ],
      "files": Array [
        "*.ts",
      ],
      "rules": Object {
        "@angular-eslint/component-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
      },
    },
    Object {
      "extends": Array [
        "plugin:@angular-eslint/template/recommended",
        "plugin:@angular-eslint/template/accessibility",
      ],
      "files": Array [
        "*.html",
      ],
      "rules": Object {},
    },
  ],
  "root": true,
}
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 4`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "lintFilePatterns": Array [
      "src/**/*.ts",
      "src/**/*.html",
    ],
  },
}
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 6`] = `
Object {
  "extends": "../../.eslintrc.json",
  "ignorePatterns": Array [
    "!**/*",
  ],
  "overrides": Array [
    Object {
      "files": Array [
        "*.ts",
      ],
      "rules": Object {
        "@angular-eslint/component-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
      },
    },
    Object {
      "files": Array [
        "*.html",
      ],
      "rules": Object {},
    },
  ],
}
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 7`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "lintFilePatterns": Array [
      "projects/another-app/**/*.ts",
      "projects/another-app/**/*.html",
    ],
  },
}
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 9`] = `
Object {
  "extends": "../../.eslintrc.json",
  "ignorePatterns": Array [
    "!**/*",
  ],
  "overrides": Array [
    Object {
      "files": Array [
        "*.ts",
      ],
      "rules": Object {
        "@angular-eslint/component-selector": Array [
          "error",
          Object {
            "prefix": "lib",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": Array [
          "error",
          Object {
            "prefix": "lib",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
      },
    },
    Object {
      "files": Array [
        "*.html",
      ],
      "rules": Object {},
    },
  ],
}
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 10`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "lintFilePatterns": Array [
      "projects/another-lib/**/*.ts",
      "projects/another-lib/**/*.html",
    ],
  },
}
`;

exports[`new-workspace it should pass linting after creating a new workspace from scratch using @angular-eslint 11`] = `
"
Linting \\"new-workspace\\"...

All files pass linting.


Linting \\"another-app\\"...

All files pass linting.


Linting \\"another-lib\\"...

__ROOT__/new-workspace/projects/another-lib/src/lib/another-lib.service.ts
  8:17  error  Unexpected empty constructor  @typescript-eslint/no-empty-function

✖ 1 problem (1 error, 0 warnings)
"
`;
